# ffai

./: .gitignore  README.md  test_secure_shell.py
ffai/: .env  build.zig  build.zig.zon  ffai.py  pyproject.toml
ffai/src/: main.zig
ffai/src/groq/: handler.zig  types.zig
ffai/src/httptest/: httptest.zig
ffsimple/: .env  ffsimple.py  pyproject.toml
ffsimple/agents/: ffplanner.py
ffsimple/ffsimple/: _ffsimple.py  ascii_art.py  config.py  detect_hwaccel.py  main.py
ffsimple/ffsimple/test/: test_command_security.py  test_secure_shell.py
ffsimple/ffsimple/tools/: secure_shell.py
ffsimple/tools/: secure_shell.py
wa/: .env  wa.py
