[project]
name = "ffsimple"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatline>=0.4.0",
    "logfire[fastapi]>=4.14.2",
    "opentelemetry-instrumentation-sqlite3>=0.59b0",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.11.1",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[dependency-groups]
dev = [
    "ffsimple",
]

[tool.uv.sources]
ffsimple = { workspace = true }
