[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffsimple"
version = "0.1.0"
description = "FFSimple - AI-powered video editor agent with interactive CLI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chatline>=0.4.0",
    "logfire[fastapi]>=4.14.2",
    "opentelemetry-instrumentation-sqlite3>=0.59b0",
    "pydantic>=2.12.4",
    "pydantic-ai>=1.11.1",
    "pytest>=8.4.2",
    "platformdirs>=4.0.0",
    "rich>=14.2.0",
    "questionary>=2.0.0",
    "httpx>=0.27.0",
    "pick>=2.2.0",
]

[project.scripts]
ffsimple = "ffsimple.main:cli"
fforca = "ffsimple.main:cli"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ffsimple",
]

[tool.uv.sources]
ffsimple = { workspace = true }
